--- a/main.html
+++ b/main.html
@@ -8,6 +8,26 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<form action="#" method="POST">
+
+		<label for="name">Name</label>
+		<input type="text" id="text" name="name" placeholder="Name">
+		<br><br>
+		<label for="phone"> Phone Number:</label>
+        <input type="text" id="phone" name="phone"  placeholder="Phone Number">
+		<br><br>
+		<label for="address"> Address:</label>
+        <input type="text" id="address" name="address"  placeholder="Address">
+		<br><br>
+		<label for="checkbox">Have you ever lived with a Dog before?</lable>
+			<input type="checkbox" id="checkbox" name="checkbox" >
+		<br><br>
+			 <label for="multiselect">Please select your preferred breeds</label>
+			<input type="select" id="multiselect" name="multiselect">
+			<br><br>
+			<button type="submit">Submit</button>
+	</form>
+	
     <script type="text/javascript" src="./script.js">
 </script>
 
