--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<form action="#" method="POST">
 
 		<label for="name">Name</label>
-		<input type="text" id="text" name="name" placeholder="Name">
+		<input type="text" id="name" name="name" placeholder="Name">
 		<br><br>
 		<label for="phone"> Phone Number:</label>
         <input type="text" id="phone" name="phone"  placeholder="Phone Number">
@@ -23,7 +23,12 @@
 			<input type="checkbox" id="checkbox" name="checkbox" >
 		<br><br>
 			 <label for="multiselect">Please select your preferred breeds</label>
-			<input type="select" id="multiselect" name="multiselect">
+			<select name="cars" id="multiselect" multiple>
+                      <option value="volvo">Volvo</option>
+                    <option value="saab">Saab</option>
+                   <option value="opel">Opel</option>
+
+</select>
 			<br><br>
 			<button type="submit">Submit</button>
 	</form>
