--- a/main.html
+++ b/main.html
@@ -24,9 +24,9 @@
 		<br><br>
 			 <label for="multiselect">Please select your preferred breeds</label>
 			<select name="cars" id="multiselect" multiple>
-                      <option value="volvo">Volvo</option>
-                    <option value="saab">Saab</option>
-                   <option value="opel">Opel</option>
+                      <option value="labrador">Volvo</option>
+                    <option value="chihua">Saab</option>
+                   <option value="bull dog">Opel</option>
 
 </select>
 			<br><br>
