--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
 	<form action="#" method="POST">
 
 		<label for="name">Name</label>
-		<input type="text" id="name" name="name" placeholder="name">
+		<input type="text" id="name" name="name" placeholder="Name">
 		<br><br>
 		<label for="phone"> Phone Number:</label>
         <input type="text" id="phone" name="phone"  placeholder="Phone Number">
@@ -20,7 +20,7 @@
         <input type="text" id="address" name="address"  placeholder="Address">
 		<br><br>
 		<label for="checkbox">Have you ever lived with a Dog before?</lable>
-			<input type="checkbox" id="checkbox" name="checkbox" value="yes" >
+			<input type="checkbox" id="checkbox" name="checkbox" value="Have you ever lived with a Dog before?" >
 		<br><br>
 			 <label for="multiSelect">Please select your preferred breeds</label>
 			<select name="multiselect" id="multiSelect" multiple>
