--- a/main.html
+++ b/main.html
@@ -30,7 +30,7 @@
 
 </select>
 			<br><br>
-			<button type="submit">Submit</button>
+			<input type="submit" id="submit" value="Submit">
 	</form>
 	
     <script type="text/javascript" src="./script.js">
